# tpi-redes

./: .gitignore  CODE_ORGANIZATION.md  Justfile  README.md  WINDOWS_COMPATIBILITY_SUMMARY.md  justfile  test.txt
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Justfile  Justfile.windows  QUICK_START.md  README-Docker.md  README.md  compose.yaml  demo-cli.sh  docker-commands.md  docker-compose.yml  docker-setup.sh  docker-test.sh  justfile  pyproject.toml  test_cli_real.sh
backend/docker/: .gitignore  Dockerfile  Dockerfile.lab  compose-lab.yaml
backend/docs/: testing_guide_es.md
backend/examples/: cli_usage.md  test_error_handling.rs  test_types.rs
backend/just/: build.just  dev.just  docker.just  lab.just  test.just  utils.just
backend/scripts/: embed_python.py  ensure-test-files.sh  install.bat  lab-validator.sh  run.bat  test.bat
backend/src/: lib.rs  main.rs
backend/src/app/: application.rs  application_runner.rs  cli_parser.rs  initialization.rs  mod.rs
backend/src/cli/: cli_error.rs  command_line_interface.rs  logging_setup.rs  mod.rs  progress_monitor.rs
backend/src/config/: mod.rs  protocol.rs  transfer_config.rs  transfer_mode.rs  validation.rs
backend/src/core/: mod.rs
backend/src/crypto/: checksum_calculator.rs  mod.rs
backend/src/errors/: config_validator.rs  error_collector.rs  error_context.rs  error_scenario_tests.rs  error_utilities.rs  mod.rs  network_error_detector.rs  transfer_error.rs
backend/src/network/: mod.rs  socket_transfer.rs  tcp_transfer_wrapper.rs  udp_transfer_wrapper.rs
backend/src/sockets/: mod.rs  tcp.rs  udp.rs
backend/src/tests/: mod.rs
backend/src/tpi_redes/: config.py  platform_compat.py
backend/src/transfer/: ack_status.rs  file_chunker.rs  file_integrity_verifier.rs  mod.rs  (+8 more)
backend/tests/: cli_functional_test.rs  cli_integration_tests.rs  communication_flow_e2e_test.rs  integration_tests.rs  progress_tracking_integration_test.rs  sender_receiver_communication_test.rs  tcp_integration_test.rs  tcp_protocol_flow_test.rs  test_error_handling.rs  transfer_history_integration_test.rs  transfer_orchestrator_integration_test.rs  udp_fire_and_forget_test.rs
(+511 files in other folders)
