[project]
name = "backend"
version = "0.1.0"
description = "Socket-based File Transfer App Backend"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.8",
    "rich>=14.2.0",
    "scapy>=2.6.1",
]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "pytest>=8.4.2",
    "ruff>=0.14.8",
]

[tool.pyright]
include = ["src"]
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 88
target-version = "py39"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "ARG",# flake8-unused-arguments
    "N",  # pep8-naming
    "SIM",# flake8-simplify
    "RUF",# Ruff-specific rules
]
ignore = []

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
